target_sources(simutrans PRIVATE
	${CMAKE_CURRENT_LIST_DIR}/ai_option_t.cc
	${CMAKE_CURRENT_LIST_DIR}/ai_selector.cc
	${CMAKE_CURRENT_LIST_DIR}/banner.cc
	${CMAKE_CURRENT_LIST_DIR}/baum_edit.cc
	${CMAKE_CURRENT_LIST_DIR}/base_info.cc
	${CMAKE_CURRENT_LIST_DIR}/citybuilding_edit.cc
	${CMAKE_CURRENT_LIST_DIR}/citylist_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/citylist_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/climates.cc
	${CMAKE_CURRENT_LIST_DIR}/display_settings.cc
	${CMAKE_CURRENT_LIST_DIR}/convoi_detail_t.cc
	${CMAKE_CURRENT_LIST_DIR}/convoi_filter_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/convoi_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/convoi_info_t.cc
	${CMAKE_CURRENT_LIST_DIR}/convoy_item.cc
	${CMAKE_CURRENT_LIST_DIR}/curiosity_edit.cc
	${CMAKE_CURRENT_LIST_DIR}/curiositylist_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/curiositylist_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/depot_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/enlarge_map_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/extend_edit.cc
	${CMAKE_CURRENT_LIST_DIR}/fabrik_info.cc
	${CMAKE_CURRENT_LIST_DIR}/factory_chart.cc
	${CMAKE_CURRENT_LIST_DIR}/factory_edit.cc
	${CMAKE_CURRENT_LIST_DIR}/factorylist_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/factorylist_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/goods_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/goods_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/ground_info.cc
	${CMAKE_CURRENT_LIST_DIR}/gui_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/gui_theme.cc
	${CMAKE_CURRENT_LIST_DIR}/halt_detail.cc
	${CMAKE_CURRENT_LIST_DIR}/halt_info.cc
	${CMAKE_CURRENT_LIST_DIR}/halt_list_filter_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/halt_list_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/halt_list_stats.cc
	${CMAKE_CURRENT_LIST_DIR}/help_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/jump_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/karte.cc
	${CMAKE_CURRENT_LIST_DIR}/kennfarbe.cc
	${CMAKE_CURRENT_LIST_DIR}/label_info.cc
	${CMAKE_CURRENT_LIST_DIR}/labellist_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/labellist_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/line_item.cc
	${CMAKE_CURRENT_LIST_DIR}/line_management_gui.cc
	${CMAKE_CURRENT_LIST_DIR}/load_relief_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/loadfont_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/loadsave_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/map_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/message_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/message_option_t.cc
	${CMAKE_CURRENT_LIST_DIR}/message_stats_t.cc
	${CMAKE_CURRENT_LIST_DIR}/messagebox.cc
	${CMAKE_CURRENT_LIST_DIR}/money_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/optionen.cc
	${CMAKE_CURRENT_LIST_DIR}/pakselector.cc
	${CMAKE_CURRENT_LIST_DIR}/password_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/player_frame_t.cc
	${CMAKE_CURRENT_LIST_DIR}/privatesign_info.cc
	${CMAKE_CURRENT_LIST_DIR}/savegame_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/scenario_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/scenario_info.cc
	${CMAKE_CURRENT_LIST_DIR}/schedule_gui.cc
	${CMAKE_CURRENT_LIST_DIR}/schedule_list.cc
	${CMAKE_CURRENT_LIST_DIR}/server_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/settings_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/settings_stats.cc
	${CMAKE_CURRENT_LIST_DIR}/signal_spacing.cc
	${CMAKE_CURRENT_LIST_DIR}/simwin.cc
	${CMAKE_CURRENT_LIST_DIR}/sound_frame.cc
	${CMAKE_CURRENT_LIST_DIR}/sprachen.cc
	${CMAKE_CURRENT_LIST_DIR}/city_info.cc
	${CMAKE_CURRENT_LIST_DIR}/station_building_select.cc
	${CMAKE_CURRENT_LIST_DIR}/themeselector.cc
	${CMAKE_CURRENT_LIST_DIR}/tool_selector.cc
	${CMAKE_CURRENT_LIST_DIR}/trafficlight_info.cc
	${CMAKE_CURRENT_LIST_DIR}/obj_info.cc
	${CMAKE_CURRENT_LIST_DIR}/welt.cc
)

add_subdirectory(components)
